# jonche-platform

./: .gitignore  CHANGES_PHASE4_LITE.md  IMPLEMENTATION_GUEST_CHECKOUT.md  MANUFACTURER_COMMUNICATION_CONTROL.md  PARTNER_LANDING_PAGE_IMPROVEMENTS.md  PHASE4_LITE_SUMMARY.md  USER_EXPERIENCE_ANALYSIS.md  append_models.py  start-dev.ps1
jonche-platform/: .env.example  .gitignore  DEPLOY.md  Makefile  PHASE4_DEPLOYMENT.md  PHASE5_COMPLETE.md  PHASE5_TEST.sh  README.md  jonche-platform.html  pyproject.toml
jonche-platform/.github/workflows/: ci.yml
jonche-platform/apps/api/: app.py  init_db.py  requirements.txt  wsgi.py
jonche-platform/apps/api/db/: __init__.py  models.py  new_models.py  seed.py
jonche-platform/apps/api/middleware/: auth.py
jonche-platform/apps/api/routes/: admin.py  admin_partners.py  analytics.py  apliiq.py  auth.py  certificates.py  drops.py  fulfillment.py  guest.py  members.py  notifications.py  orders.py  partner_dashboards.py  (+12 more)
jonche-platform/apps/web/: app.py  requirements.txt  wsgi.py
jonche-platform/docs/: Apliiq_discuss.md  CURRENTSTEPS.md  EMAIL_NOTIFICATIONS_QUICKSTART.md  IMAGE_GENERATION.md  IMPLEMENTPLAN.md  PARTNER_DASHBOARDS.md  PARTNER_DASHBOARDS_ADMIN.md  PARTNER_EMAIL_NOTIFICATIONS.md  PHASE4_ADMIN_DASHBOARD.md  PHASE4_DELIVERY_SUMMARY.md  PHASE4_IMPLEMENTATION_CODE.md  PHASE4_LITE_GUIDE.md  PHASE4_PARTNER_DASHBOARD.md  PHASE4_PAYOUT_PROCESSING.md  PHASE4_QUICK_REFERENCE.md  PHASE5.md  PHASE5_API.md  STORE_SETUP.md  SYSTEM.md  SYSTEM_ARCHITECTURE.md  UPGRADE.md
jonche-platform/tests/: test_e2e_api.py  test_e2e_complete.py
(+59 files in other folders)
